ManyToMany with colors

--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -37,9 +37,9 @@
                             <label for="colors">Couleur</label>
                             <select class="custom-select" id="colors">
                                 <option selected>Choisir</option>
-                                <option value="1">Bleu</option>
-                                <option value="2">Rouge</option>
-                                <option value="3">Vert</option>
+                                {% for color in product.colors %}
+                                    <option value="{{ color.id }}">{{ color.name }}</option>
+                                {% endfor %}
                             </select>
                         </div>
                         <div class="form-group">
