--- a/templates/product/create.html.twig
+++ b/templates/product/create.html.twig
@@ -2,6 +2,8 @@
 
 {% block title %}Créer un produit - {{ parent() }}{% endblock %}
 
+{% block banner_title %}Créer un produit{% endblock %}
+
 {% block body %}
 <div class="container">
     <div class="row">
