--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -14,6 +14,9 @@
                     <a class="nav-link" href="{{ path('product_list') }}">Produits</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{{ path('product_create') }}">Créer un produit</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{{ path('contact') }}">Contact</a>
                 </li>
             </ul>
