--- a/templates/product/list.html.twig
+++ b/templates/product/list.html.twig
@@ -71,6 +71,23 @@
                                 <div class="col">
                                     <a href="#" class="btn btn-success btn-block">Ajouter au panier</a>
                                 </div>
+                                {% if app.user %}
+                                <div class="col mt-4">
+                                    {% if is_granted('ROLE_USER') %}
+                                    <a href="{{ path('product_edit', {id: product.id}) }}" class="btn btn-secondary mr-3">Modifier</a>
+                                    {% endif %}
+
+                                    {% if is_granted('ROLE_ADMIN') %}
+                                    <a
+                                        href="{{ path('product_delete', {id: product.id}) }}"
+                                        class="btn btn-danger"
+                                        onclick="return confirm('Êtes-vous sûr de vouloir supprimer ?')"
+                                    >
+                                        Supprimer
+                                    </a>
+                                    {% endif %}
+                                </div>
+                                {% endif %}
                             </div>
                         </div>
                     </div>
