--- a/templates/product/list.html.twig
+++ b/templates/product/list.html.twig
@@ -53,7 +53,11 @@
                 {% for product in products %}
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card card-product mb-4">
-                        <img class="card-img-top" src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                        {% if product.image %}
+                            <img class="card-img-top" src="{{ vich_uploader_asset(product, 'imageFile') }}" alt="Card image cap">
+                        {% else %}
+                            <img class="card-img-top" src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                        {% endif %}
                         <div class="card-body">
                             <h4 class="card-title">
                                 <a href="{{ path('product_show', {slug: product.slug}) }}" title="{{ product.name }}">
