--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -47,7 +47,7 @@
         {% block javascripts %}
             {#{{ encore_entry_script_tags('app') }}#}
             <!-- JS -->
-            <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" type="text/javascript"></script>
+            <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" type="text/javascript"></script>
             <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" type="text/javascript"></script>
             <script src="{{ asset('js/script.js') }}"></script>
